--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "dependencies": {},
   "keywords": ["versionskontrolle", "git", "tools"],
-  "author": "Ihr Name",
+  "author": "New Author Name",
   "license": "MIT"
 }
