Update author name in package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "dependencies": {},
   "keywords": ["versionskontrolle", "git", "tools"],
-  "author": "New Author Name",
+  "author": "Updated Author Name",
   "license": "MIT"
 }
